made swagger ui changes
